--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,4 @@ python-dotenv>=1.0.0
 statsmodels>=0.14.0
 scikit-learn>=1.3.0
 seaborn>=0.13.0
-audioop-lts>=0.2.0
+audioop-lts>=0.2.0; python_version >= "3.13"
