--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ langchain-community>=0.0.20
 openai>=1.10.0
 sentence-transformers>=2.2.2
 faiss-cpu>=1.7.4
-gradio==4.44.1
+gradio>=5.0.0
 pandas>=2.0.0
 openpyxl>=3.1.0
 plotly>=5.18.0
